package com.donatrack.donaciones.domain.enums;

public enum TipoJuridica {
  GUBERNAMENTAL,
  ONG,
  EMPRESA,
  INSTITUCION
}
